--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,20 @@
     "psr-4": {
       "TYPO3\\CMS\\Core\\": "typo3_src/typo3/sysext/core/"
     }
+  },
+  "extra": {
+    "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms"
+    }
+  },
+  "scripts": {
+    "post-update-cmd": [
+      "php -r \"unlink('typo3');\"",
+      "php -r \"unlink('index.php');\""
+    ],
+    "post-install-cmd": [
+      "php -r \"unlink('typo3');\"",
+      "php -r \"unlink('index.php');\""
+    ]
   }
 }
