--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require-dev": {
     "typo3/cms": "~7.6",
-    "phpunit/phpunit": "~4.8"
+    "phpunit/phpunit": "~4.8",
+    "squizlabs/php_codesniffer": "~2.6"
   },
   "require": {
     "fzaninotto/faker": "~1.5"
