--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ php:
   - 5.5
   - 5.6
   - 7
+  - 7.1
 
 env:
   - TYPO3_VERSION=^7.6.0
+  - TYPO3_VERSION=^8.7.0
   - TYPO3_VERSION=dev-master
 
 sudo: false
