--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,38 @@
 language: php
 
-php:
-  - 5.5
-  - 5.6
-  - 7
-  - 7.1
-
-env:
-  - TYPO3_VERSION=^7.6.0
-  - TYPO3_VERSION=^8.7.0
-  - TYPO3_VERSION=dev-master
+matrix:
+  fast_finish: true
+  include:
+    - php: 5.5
+      env: TYPO3_VERSION=^7.6
+    - php: 5.6
+      env: TYPO3_VERSION=^7.6
+    - php: 7.0
+      env: TYPO3_VERSION=^7.6
+    - php: 7.0
+      env: TYPO3_VERSION=~8.3.0
+    - php: 7.0
+      env: TYPO3_VERSION=~8.4.0
+    - php: 7.0
+      env: TYPO3_VERSION=~8.5.0
+    - php: 7.0
+      env: TYPO3_VERSION=~8.6.0
+    - php: 7.0
+      env: TYPO3_VERSION="dev-master as 8.6.0"
+    - php: 7.1
+      env: TYPO3_VERSION=^7.6
+    - php: 7.1
+      env: TYPO3_VERSION=^8
+    - php: 7.1
+      env: TYPO3_VERSION="dev-master as 8.6.0"
+  allow_failures:
+    - env: TYPO3_VERSION="dev-master as 8.6.0"
 
 sudo: false
 
 before_script:
-  - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - composer require typo3/cms="$TYPO3_VERSION"
+  - composer require fzaninotto/faker 1.6
 
 script:
   - .Build/bin/phpcs -n --standard=PSR2 --extensions=php --ignore=Tests/Unit/Seeder/SeedTest.php *
