--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,18 @@
     "issues": "https://github.com/TildBJ/seeder/issues",
     "source": "https://github.com/TildBJ/seeder"
   },
+  "require": {
+    "php": ">=5.5.0",
+    "fzaninotto/faker": "^1.6",
+
+    "typo3/cms-core": "^7.6",
+    "typo3/cms-backend": "^7.6",
+    "typo3/cms-extbase": "^7.6",
+    "typo3/cms-extensionmanager": "^7.6",
+    "typo3/cms-install": "^7.6",
+    "typo3/cms-scheduler": "^7.6",
+  },
   "require-dev": {
-    "typo3/cms": "~7.6",
     "phpunit/phpunit": "~4.8",
     "squizlabs/php_codesniffer": "~2.6",
     "symfony/var-dumper": "^3.2"
@@ -38,6 +48,9 @@
       "Dennis\\Seeder\\": "Classes"
     }
   },
+  "replace": {
+    "typo3-ter/seeder": "self.version"
+  },
   "config": {
       "vendor-dir": ".Build/vendor",
       "bin-dir": ".Build/bin"
@@ -50,8 +63,5 @@
               "partOfMinimalUsableSystem": true
           }
       }
-  },
-  "require": {
-    "fzaninotto/Faker": "^1.6"
   }
 }
