--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "typo3/cms-extbase": "^7.6",
     "typo3/cms-extensionmanager": "^7.6",
     "typo3/cms-install": "^7.6",
-    "typo3/cms-scheduler": "^7.6",
+    "typo3/cms-scheduler": "^7.6"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8",
