--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
     "php": ">=5.5.0",
     "fzaninotto/faker": "^1.6",
 
-    "typo3/cms-core": "^7.6",
-    "typo3/cms-backend": "^7.6",
-    "typo3/cms-extbase": "^7.6",
-    "typo3/cms-extensionmanager": "^7.6",
-    "typo3/cms-install": "^7.6",
-    "typo3/cms-scheduler": "^7.6"
+    "typo3/cms-core": "^7.6 || ^8.0",
+    "typo3/cms-backend": "^7.6 || ^8.0",
+    "typo3/cms-extbase": "^7.6 || ^8.0",
+    "typo3/cms-extensionmanager": "^7.6 || ^8.0",
+    "typo3/cms-install": "^7.6 || ^8.0",
+    "typo3/cms-scheduler": "^7.6 || ^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8",
