--- a/.travis.yml
+++ b/.travis.yml
@@ -10,39 +10,11 @@ matrix:
     - php: 7.0
       env: TYPO3_VERSION=^7.6
     - php: 7.0
-      env: TYPO3_VERSION=~8.0.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.1.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.2.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.3.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.4.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.5.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.6.0
-    - php: 7.0
-      env: TYPO3_VERSION=~8.7.0
+      env: TYPO3_VERSION=^8.7
     - php: 7.1
       env: TYPO3_VERSION=^7.6
     - php: 7.1
-      env: TYPO3_VERSION=~8.0.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.1.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.2.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.3.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.4.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.5.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.6.0
-    - php: 7.1
-      env: TYPO3_VERSION=~8.7.0
+      env: TYPO3_VERSION=^8.7
 
 sudo: false
 
