--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8",
+    "nimut/testing-framework": "^1.0",
     "squizlabs/php_codesniffer": "~2.6",
     "symfony/var-dumper": "^3.2"
   },
