--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["dummy data", "test data", "database seeder", "seeding"],
   "homepage": "http://seeder.roemmich.eu",
   "time": "2016-04-18",
-  "license": "GPL-3.0+",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Dennis Römmich",
