--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ before_script:
   - composer require nimut/testing-framework 1.1
 
 script:
-  - .Build/bin/phpcs -n --standard=PSR2 --extensions=php --ignore=Tests/Unit/Seeder/SeedTest.php ./Classes/ ./Resources/ ./Tests/ ./ext_emconf.php ./ext_localconf.php ./ext_tables.php
+  - .Build/bin/phpcs -n --standard=PSR2 --extensions=php --ignore=Tests/Unit/Seeder/SeedTest.php ./Classes/ ./Tests/
   - TYPO3_PATH_WEB=".Build/Web" .Build/bin/phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/
