--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,19 @@ language: php
 
 matrix:
   fast_finish: true
-  include:
-    - php: 5.5
-      env: TYPO3_VERSION=^7.6
-    - php: 5.6
-      env: TYPO3_VERSION=^7.6
-    - php: 7.0
-      env: TYPO3_VERSION=^7.6
-    - php: 7.0
-      env: TYPO3_VERSION=^8.7
-    - php: 7.1
-      env: TYPO3_VERSION=^7.6
-    - php: 7.1
-      env: TYPO3_VERSION=^8.7
+  php:
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
+  evn:
+  - TYPO3_VERSION=^7.6
+  - TYPO3_VERSION=^8.7
+  exclude:
+  - php: 5.5
+    env: TYPO3_VERSION=^8.7
+  - php: 5.6
+    env: TYPO3_VERSION=^8.7
 
 sudo: false
 
