[TASK] Move Unittest to Unit Namespace

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "psr-4": {
       "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
       "TYPO3\\CMS\\Core\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Classes/",
-      "Dennis\\Seeder\\Tests\\": "Tests/Unit/"
+      "Dennis\\Seeder\\Tests\\": "Tests/"
     }
   },
   "autoload": {
