--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ before_script:
 
 script:
   - .Build/bin/phpcs -n --standard=PSR2 --extensions=php --ignore=Tests/Unit/Seeder/SeedTest.php ./Classes/ ./Tests/
-  - TYPO3_PATH_WEB=".Build/Web" .Build/bin/phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/
+  - .Build/bin/phpunit
