--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
   "require": {
     "php": "^7.0 || ^7.1 || ^7.2",
     "fzaninotto/faker": "^1.7",
-    "typo3/cms-core": "^7.6 || ^8.7",
-    "typo3/cms-backend": "^7.6 || ^8.7",
-    "typo3/cms-extbase": "^7.6 || ^8.7",
-    "typo3/cms-extensionmanager": "^7.6 || ^8.7",
-    "typo3/cms-install": "^7.6 || ^8.7",
-    "typo3/cms-scheduler": "^7.6 || ^8.7"
+    "typo3/cms-core": "^7.6 || ^8.7 || ^9.5",
+    "typo3/cms-backend": "^7.6 || ^8.7 || ^9.5",
+    "typo3/cms-extbase": "^7.6 || ^8.7 || ^9.5",
+    "typo3/cms-extensionmanager": "^7.6 || ^8.7 || ^9.5",
+    "typo3/cms-install": "^7.6 || ^8.7 || ^9.5",
+    "typo3/cms-scheduler": "^7.6 || ^8.7 || ^9.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0",
