Require minimal cms

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
 sudo: false
 
 before_script:
-  - composer require typo3/cms="$TYPO3_VERSION"
+  - composer require typo3/minimal="$TYPO3_VERSION"
   - composer install
   - git checkout composer.json
 
