--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "require-dev": {
     "phpunit/phpunit": "^6.0",
     "phpunit/php-code-coverage": "^5.0 || ^6.0",
-    "nimut/testing-framework": "^3.0",
+    "nimut/testing-framework": "^3.0 || ^4.0",
     "squizlabs/php_codesniffer": "^3.3",
     "symfony/var-dumper": "^3.4 || ^4.0"
   },
